added logo on main screen

--- a/376.kv
+++ b/376.kv
@@ -189,6 +189,46 @@
     Screen:
         name: 'main'
         RelativeLayout:
+            Widget:
+                size_hint: (0.4, 0.4)
+                pos_hint: {'center_x':0.5, 'center_y':0.65}
+                hex_width: self.size[0]
+                hex_len: self.size[0]/2
+                hex_height: self.hex_len*(3**0.5)
+                canvas:
+                    #hex is comprised of six triangles
+                    Color:
+                        rgba: (0.5,0.5,0.5,1.0)
+                    #top
+                    Triangle:
+                        points: [] if self.hex_len is None else [self.center_x, self.center_y, self.center_x - self.hex_len/2, self.center_y - self.hex_height/2, self.center_x + self.hex_len/2, self.center_y - self.hex_height/2]
+                    #topright
+                    Triangle:
+                        points: [] if self.hex_len is None else [self.center_x, self.center_y, self.center_x + self.hex_len/2, self.center_y - self.hex_height/2, self.center_x + self.hex_len, self.center_y]
+                    #bottomright
+                    Triangle:
+                        points: [] if self.hex_len is None else [self.center_x, self.center_y, self.center_x + self.hex_len, self.center_y, self.center_x + self.hex_len/2, self.center_y + self.hex_height/2]
+                    #bottom
+                    Triangle:
+                        points: [] if self.hex_len is None else [self.center_x, self.center_y, self.center_x + self.hex_len/2, self.center_y + self.hex_height/2, self.center_x - self.hex_len/2, self.center_y + self.hex_height/2]
+                    #bottomleft
+                    Triangle:
+                        points: [] if self.hex_len is None else [self.center_x, self.center_y, self.center_x - self.hex_len/2, self.center_y + self.hex_height/2, self.center_x - self.hex_len, self.center_y]
+                    #topleft
+                    Triangle:
+                        points: [] if self.hex_len is None else [self.center_x, self.center_y, self.center_x - self.hex_len, self.center_y, self.center_x - self.hex_len/2, self.center_y - self.hex_height/2]
+                    #border
+                    Color:
+                        rgba: (0.7,0.7,0.7,1.0)
+                    Line:
+                        points: [] if self.hex_len is None else [ self.center_x - self.hex_len/2, self.center_y - self.hex_height/2, self.center_x + self.hex_len/2, self.center_y - self.hex_height/2, self.center_x + self.hex_len, self.center_y, self.center_x + self.hex_len/2, self.center_y + self.hex_height/2, self.center_x - self.hex_len/2, self.center_y + self.hex_height/2, self.center_x - self.hex_len, self.center_y, self.center_x - self.hex_len/2, self.center_y - self.hex_height/2 ]
+            Label:
+                size_hint: (0.4, 0.4)
+                pos_hint: {'center_x':0.5, 'center_y':0.65}
+                halign: 'center'
+                font_size: 1 if self.center_x is None else 0.2*self.size[0]
+                text: "37.6"
+                color: (0.8, 0.8, 0.8, 1.0)
             BoxLayout:
                 size_hint: [0.5, 0.2]
                 pos_hint: {'center_x':0.5, 'y':0.1}
